apiConfig Base Url refactoring to point to render deployment